--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -3,11 +3,13 @@
 name: Frontend CI/CD
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
     paths:
       - "frontend/**"
+      - ".github/workflows/frontend-ci-cd.yml"
 
 jobs:
   build-and-deploy:
@@ -57,4 +59,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
+
 
