--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,14 @@
   "name": "starttech-frontend",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "install": "npm install",
-    "build": "echo \"build step placeholder\""
-  },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "test": "react-scripts test --watchAll=false",
+    "build": "react-scripts build",
+    "start": "react-scripts start"
   }
 }
