--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -31,7 +31,8 @@ jobs:
         run: npm ci
 
       - name: Run tests (if any)
-        run: npm test --if-present
+        run: npm test -- --watchAll=false --passWithNoTests
+
 
       - name: Security scan (npm audit)
         run: npm audit --audit-level=high || true
